accessible/generic/LocalAccessible.cpp
@@ -1641,7 +1641,9 @@ void LocalAccessible::Value(nsString& aValue) const {
       }
     }
 
-    if (option) nsTextEquivUtils::GetTextEquivFromSubtree(option, aValue);
+    // If there's a selected item, get the value from it. Otherwise, determine
+    // the value from descendant elements.
+    nsTextEquivUtils::GetTextEquivFromSubtree(option ? option : this, aValue);
   }
 }
 
